--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
     <title>Coding Bootcamp Testimonials Slider</title>
   </head>
   <body>
-    “ I’ve been interested in coding for a while but never taken the jump, until
-    now. I couldn’t recommend this course enough. I’m now in the job of my
-    dreams and so excited about the future. ” Tanya Sinclair UX Engineer “ If
+    <section class="slider">
+      <div class="slider__fig-container">
+        <figure>
+          <img src="#" alt="picture">
+        </figure>
+        <div class="slider-buttons"></div>
+      </div>
+      <div class="slider__text-container">
+        <p class="slider__quote">
+          “ I’ve been interested in coding for a while but never taken the jump, until
+          now. I couldn’t recommend this course enough. I’m now in the job of my
+          dreams and so excited about the future. ”
+        </p>
+        <div class="slider__name-label">
+          <b>Tanya Sinclair</b>
+          <span>UX Engineer</span>
+        </div>
+
+      </div>
+    </section>
+    
+    “ If
     you want to lay the best foundation possible I’d recommend taking this
     course. The depth the instructors go into is incredible. I now feel so
     confident about starting up as a professional developer. ” John Tarkpor
