Adds intial setup

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="css/style.min.css">
 
     <title>Coding Bootcamp Testimonials Slider</title>
   </head>
   <body>
-    <section class="slider">
+    <section class="slider" data-testimonial="1">
       <div class="slider__fig-container">
         <figure>
-          <img src="#" alt="picture">
+          <img src="./images/image-tanya.jpg" alt="picture">
         </figure>
         <div class="slider-buttons"></div>
       </div>
-      <div class="slider__text-container">
+      <div class="slider__text-container"  >
         <p class="slider__quote">
           “ I’ve been interested in coding for a while but never taken the jump, until
           now. I couldn’t recommend this course enough. I’m now in the job of my
@@ -28,11 +29,12 @@
 
       </div>
     </section>
-    
+    <!--     
     “ If
     you want to lay the best foundation possible I’d recommend taking this
     course. The depth the instructors go into is incredible. I now feel so
     confident about starting up as a professional developer. ” John Tarkpor
     Junior Front-end Developer
+    -->
   </body>
 </html>
