--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/media-queries.min.css">
 
     <title>Coding Bootcamp Testimonials Slider</title>
   </head>
@@ -18,9 +19,9 @@
       </div>
       <div class="slider__text-container"  >
         <p class="slider__quote">
-          “ I’ve been interested in coding for a while but never taken the jump, until
+          I’ve been interested in coding for a while but never taken the jump, until
           now. I couldn’t recommend this course enough. I’m now in the job of my
-          dreams and so excited about the future. ”
+          dreams and so excited about the future.
         </p>
         <div class="slider__name-label">
           <b>Tanya Sinclair</b>
